Updating Fast Buffers for new FastCDR library.